Added getAvailableTheses for professor,made login page ,made professor dashboard page,made create/show available theses page
/
